made ImportPokemonController with methods to import pokemon for external servic: pokeapi
